updatebyid returns only 1 entity instead of array
